# ArthSaathi

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: health.py
backend/app/core/: config.py
backend/app/db/: database.py  session.py
backend/app/models/: __init__.py  base_model.py  role.py  user.py  user_role.py
